app/styles/views/_quick-jump.scss
.quick-jump {
  @include single-transition(background-color, 150ms, linear);

  bottom: 0;
  left: 0;
  overflow-y: auto;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;

  > * {
    pointer-events: all;
  }

  .bar, .actions {
    padding: 0 $column-gutter / 2;
  }

  .bar {
    background-color: $quick-jump-background;
    display: block;
    height: $quick-jump-height;
    line-height: $quick-jump-height;
    position: relative;
    width: 100%;

    .progress-indicator {
      @include single-transition(all, 150ms, linear);

      border-radius: 50%;
      color: $primary-color;
      height: $quick-jump-icon-size;
      overflow: hidden;
      position: absolute;
      text-align: center;
      top: ($quick-jump-height - $quick-jump-icon-size) / 2;
      width: $quick-jump-icon-size;

      i {
        @include icon(search);

        line-height: $quick-jump-icon-size;
        display: block;
      }
    }

    input {
      @include single-transition(all, 150ms, linear);

      background-color: transparent;
      border-width: 0;
      box-shadow: none;
      display: inline-block;
      margin: 0;
      text-indent: $quick-jump-icon-size + rem-calc(5);
      width: 100%;
    }
  }

  &.loading {
    .results .content {
      opacity: 0.7;
    }
  }

  &.active {
    background-color: $overlay-transparent-background;

    .bar {
      background-color: $white;
      border-bottom: 1px solid $quick-jump-background;

      .progress-indicator {
        background-color: $primary-color;
        color: $white;
      }
    }
  }

  .liquid-actions {
    overflow: visible;
  }

  .actions {
    $actions-button-size: $quick-jump-icon-size;

    position: absolute;
    right: 0;
    text-align: right;
    top: ($quick-jump-height - $actions-button-size) / 2;
    width: 10%;

    button {
      height: $actions-button-size;
      width: $actions-button-size;
      margin-bottom: 0px;
    }

    .close {
      @include icon(times-circle);

      border-width: 0;
      background-color: transparent;
    }

    .change-app {
      @include icon(th);
    }

    .add {
      @include icon(plus);
    }

    .apps, .add-actions {
      @extend %dropdown;

      text-align: left;
      min-width: rem-calc(150);
    }
  }

  .liquid-results {
    @extend %static-liquid-container;
  }

  .results {
    position: relative;
    width: 100%;
    background-color: $quick-jump-results-background;

    .content {
      @include single-transition(opacity, 150ms, linear);

      padding: $column-gutter / 2;

      ul {
        list-style-type: none;
        margin: 0;
        padding: 0;
      }

      li {
        height: $quick-jump-results-item-height;
        line-height: $quick-jump-results-item-height;
      }

      article, h1 {
        padding: 0 $column-gutter / 2;
      }

      article {
        border-bottom: 1px solid darken($quick-jump-results-background, 5%);
        cursor: pointer;

        &:hover {
          background-color: darken($quick-jump-results-background, 10%);
        }
      }

      section {
        margin: $column-gutter / 2 $column-gutter;
        padding: $column-gutter / 2;

        h1 {
          @extend %heading-medium-uppercase;

          line-height: $quick-jump-results-heading-height;
          margin-bottom: $column-gutter / 2;
        }
      }
    }
  }
}

